Added first endpoints and database

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-  "editor.formatOnSave": true,
-  "rust-analyzer.check.command": "clippy",
-  "rust-analyzer.checkOnSave": true,
-  "rust-analyzer.check.extraArgs": ["--", "-D", "warnings"]
+  "editor.formatOnSave": true
+  // "rust-analyzer.check.command": "clippy",
+  // "rust-analyzer.checkOnSave": true,
+  // "rust-analyzer.check.extraArgs": ["--", "-D", "warnings"]
 }
