First deployment to Digital Ocean

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # Postgres
-DATABASE_URL=postgres://postgres:postgrespw@localhost:55000/zero2prod?pooling=true
+DATABASE_URL=postgres://postgres:postgrespw@localhost:55000/zero2prod
