--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,12 @@ path = "src/main.rs"
 name = "zero2prod"
 
 [dependencies]
+secrecy = { version = "0.8", features = ["serde"] }
+once_cell = "1"
+tracing = { version = "0.1", features = ["log"] }
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
+tracing-bunyan-formatter = "0.3"
+tracing-actix-web = "0.7"
 serde = { version = "1", features = ["derive"] }
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
@@ -36,7 +42,8 @@ features = [
 "postgres",
 "uuid",
 "chrono",
-"migrate"
+"migrate",
+"offline"
 ]
 
 # Dev dependencies are used exclusively when running tests or examples
