--- a/configuration/base.yaml
+++ b/configuration/base.yaml
@@ -1,6 +1,7 @@
-application_port: 8000
+application:
+  port: 8000
 database:
-  host: "127.0.0.1"
+  host: "localhost"
   port: 55000
   username: "postgres"
   password: "postgrespw"
