--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,9 @@ tracing = { version = "0.1", features = ["log"] }
 tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
 tracing-bunyan-formatter = "0.3"
 tracing-actix-web = "0.7"
+tracing-log = "0.1.3"
 serde = { version = "1", features = ["derive"] }
+serde-aux = "4"
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 config = "0.13"
