--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -28,7 +28,7 @@ jobs:
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgrespw
-          POSTGRES_DB: zero2prod
+          POSTGRES_DB: newsletter
         # When you map ports using the ports keyword, GitHub uses the --publish command to publish the container’s ports to the Docker host
         # Opens tcp port 5432 on the host and service container
         ports:
@@ -95,7 +95,7 @@ jobs:
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgrespw
-          POSTGRES_DB: zero2prod
+          POSTGRES_DB: newsletter
         ports:
           - 55000:5432
     steps:
@@ -130,7 +130,7 @@ jobs:
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgrespw
-          POSTGRES_DB: zero2prod
+          POSTGRES_DB: newsletter
         ports:
           - 55000:5432
     steps:
