--- a/configuration/base.yaml
+++ b/configuration/base.yaml
@@ -5,4 +5,9 @@ database:
   port: 55000
   username: "postgres"
   password: "postgrespw"
-  database_name: "zero2prod"
+  database_name: "newsletter"
+email_client:
+  base_url: "localhost"
+  sender_email: "test@gmail.com"
+  authorization_token: "HhMO.WQ3FL_whs"
+  timeout_milliseconds: 10000
